--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,72 +1,231 @@
- 
- * {box-sizing: border-box;}
-  header {
-    animation-delay: 2s;
-    animation: .5s ease-in-out 0s 1 slideFromTop;
-    position:fixed;
-    top:0;
-    width:100%;
-    z-index: 100;
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: calc(var(--spc) * 3.5);
+  z-index: 10;
+}
+
+.nav-logo {
+  height: 45px;
+  display: block;
+  margin-top: var(--spc-quarter);
+}
+
+.nav-toggle {
+  display: none;
+}
+
+.nav-items {
+  list-style: none;
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  padding: 0;
+}
+
+.nav-items li {
+  margin-left: var(--spc-double);
+  transform-origin: 0 50%;
+  transform: scale(1);
+  opacity: 1;
+  transition: .2s ease-in transform, .2s ease-in opacity;
+}
+
+.nav-items a {
+  background: transparent;
+  vertical-align: baseline;
+  color: var(--color-dark-gray);
+  font-weight: 500;
+}
+
+.nav-items a:hover {
+  color: var(--color-orange);
+}
+
+.nav-items a svg {
+  transform: translateY(3px);
+}
+
+.nav-items a:hover svg #gliph {
+  fill: var(--color-orange);
+}
+
+.nav-search {
+  position: absolute;
+  width: 40vw;
+  max-width: 80%;
+  left: 50%;
+  transform-origin: 100% 50%;
+  transform: translateX(-50%) scale(0);
+  opacity: 0;
+  transition: .2s ease-in transform, .2s ease-in opacity;
+}
+
+.nav-search svg {
+  display: block;
+  width: 1rem;
+  height: 1rem;
+}
+
+.nav-search .form {
+  height: calc(var(--spc) * 2);
+  margin-top: .75rem;
+  display: flex;
+  align-items: center;
+  border: none;
+}
+
+.nav-search .form form {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 24px auto 24px;
+  padding: 5px;
+  align-items: center;
+}
+
+.nav-search .form input {
+  flex-grow: 1;
+  border: none;
+  background: transparent;
+  outline: none;
+}
+
+.nav-search .form button {
+  padding: 0 var(--spc-half);
+  border-radius: var(--radius);
+}
+
+.nav-search-suggestions {
+  position: relative;
+  top: calc(var(--spc) * 1.5);
+}
+
+.overlay-empty {
+  z-index: 5;
+  background: var(--color-dark-50);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: none;
+}
+
+.search-visible body {
+  overflow: hidden;
+}
+
+.search-visible .nav-items li {
+  transform: scale(0);
+  opacity: 0;
+}
+
+.search-visible .nav-search {
+  transform: translateX(-50%) scale(1);
+  opacity: 1;
+}
+
+form input {
+  padding: var(--spc-quarter);
+  font-size: 1rem;
+}
+
+@media all and (min-width: 980px) {
+  .current-menu-item {
+    position: relative;
   }
- 
-  nav { 
-      background: #282828;
-      height: 4.5rem;
-      display: flex;
-      flex-wrap: nowrap;
-      justify-content: space-between;
-      align-items: center;
-      color: White;
-      padding: 0 2%;
-      
-      
-      font-weight: 500;
-      -webkit-font-smoothing: subpixel-antialiased;
-      -webkit-font-smoothing: antialiased;
-      -webkit-box-shadow: 0px 10px 23px -13px rgba(0,0,0,0.42);
-      -moz-box-shadow: 0px 10px 23px -13px rgba(0,0,0,0.42);
-      box-shadow: 0px 10px 23px -13px rgba(0,0,0,0.42)
-    }
-    nav a { background-image: none; }
-      .navigation {
-          display: flex;
-          align-items: center
-         }
-      li {
-          list-style: none;
-          padding: 0 14px;
-          }
-      li a {
-        color: White;
-        text-decoration: none;
-        transition: all 0.15s ease-in-out;
-        padding:6px 0;
-        font-size:1.1rem;
-        }
-      a:hover {
-         color: var(--color-orange);
-      }
-  .search-icon {
-    padding-top:7px;
-    width:20px;
-    height:auto;
+  .current-menu-item:before, .current_page_parent:before {
+    content: "";
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: var(--color-orange);
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
   }
-  .button-nav {
-    padding:10px 24px;
-    border-radius:5rem;
+  .current_page_parent:before {
+    background: var(--color-dark-gray);
+  }
+  .current-menu-item:before {
     background: var(--color-orange);
   }
-  a.button-nav:hover {
-    color:White;
-    background: #ff7b00;
+}
+
+@media all and (max-width: 979px) {
+  .nav {
+    height: 3.5rem;
+    overflow: hidden;
+    transition: .3s ease-in height;
   }
-  
-  
-  @keyframes slideFromTop {
-    0% {
-      transform: translateY(-80px)
-    }
-    100% {
-      transform: translateY(0); 
-    }
-  }  
+  .nav>.columns {
+    display: block;
+  }
+  .nav-logo {
+    padding-bottom: 1rem;
+  }
+  .nav-items {
+    margin-left: 0;
+    border-top: 2px solid var(--color-light-gray);
+    display: block;
+  }
+  .nav-items li {
+    margin-left: 0;
+    border-bottom: 1px solid var(--color-light-gray);
+  }
+  .nav-items a {
+    padding: var(--spc-quarter) 1.5rem;
+    background: transparent;
+    display: block;
+  }
+  .nav-items li:first-child {
+    display: none;
+  }
+  .nav-search {
+    display: block;
+    position: static;
+    transform: none;
+    width: auto;
+    max-width: 100%;
+    opacity: 1;
+    padding-left: 1.5rem;
+  }
+  .nav-search .form {
+    background: var(--color-light-gray);
+    margin-bottom: var(--spc-half);
+  }
+  .nav-search .form a {
+    display: none;
+  }
+  .nav-search-suggestions {
+    display: none;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .nav-toggle {
+    position: absolute;
+    width: 2.5rem;
+    height: 2.5rem;
+    top: .5rem;
+    right: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+  }
+  .nav-toggle> :last-child {
+    display: none;
+  }
+  .mobile-menu-visible .nav-toggle> :last-child {
+    display: block;
+  }
+  .mobile-menu-visible .nav-toggle> :first-child {
+    display: none;
+  }
+}
