--- a/styles/decoration.css
+++ b/styles/decoration.css
@@ -56,6 +56,10 @@ BOX SHADOWS --------------------------------------------------
     color: var(--color-light);
 }
 
+.container-text {
+    color: var(--color-dark-80);
+}
+
 .bg-orange {
     background-color: var(--color-orange);
 }
@@ -82,6 +86,10 @@ BOX SHADOWS --------------------------------------------------
 
 .bg-light {
     background-color: var(--color-light);
+}
+
+.bg-none {
+    background: transparent !important;
 }
 
 .shadow {
@@ -126,4 +134,16 @@ BOX SHADOWS --------------------------------------------------
 
 #wpadminbar:hover {
     opacity: 1 !important;
+}
+
+/* LISTS */
+
+.list-unstyled {
+    list-style: none;
+}
+
+/* SVG */
+
+.svg-hover-highlight svg:hover .colorchange {
+    fill: var(--color-orange);
 }
