--- a/styles/images.css
+++ b/styles/images.css
@@ -3,6 +3,23 @@ img {
     height: auto;
 }
 
+.alignright {
+    float: right;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+}
+
+.alignleft {
+    float: left;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+}
+
+.aligncenter {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .img-fluid {
     max-width: 100%;
 }
