--- a/styles/basics.css
+++ b/styles/basics.css
@@ -19,3 +19,12 @@ a {
 a:hover {
     background-size: 100% 100%, 100% 100%;
 }
+
+.anchor-offset:before {
+    content: "";
+    position: relative;
+    margin-top: -6rem;
+    height: 6rem;
+    display: block;
+    z-index: -1;
+}
