--- a/styles/decoration.css
+++ b/styles/decoration.css
@@ -147,3 +147,30 @@ BOX SHADOWS --------------------------------------------------
 .svg-hover-highlight svg:hover .colorchange {
     fill: var(--color-orange);
 }
+
+/* SEPARATORS and HRs */
+
+.separator {
+    border: solid 0;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    margin: calc(var(--spc) * 5) auto;
+    width: 10rem;
+    border-radius: var(--radius);
+}
+
+/* TEMPORARY HIGHLIGHT */
+
+.temp-highlight {
+    animation: temp-highlight 3s;
+    animation-iteration-count: 1;
+}
+
+@keyframes temp-highlight {
+    0% {
+        background: var(--color-orange-30);
+    }
+    100% {
+        background: transparent;
+    }
+}
