--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,16 @@
 html {
     /* COLORS */
-    --color-orange: #FF5400;
+    --color-orange: rgba(255, 84, 0, 1);
+    --color-orange-90: rgba(255, 84, 0, .9);
+    --color-orange-80: rgba(255, 84, 0, .8);
+    --color-orange-70: rgba(255, 84, 0, .7);
+    --color-orange-60: rgba(255, 84, 0, .6);
+    --color-orange-50: rgba(255, 84, 0, .5);
+    --color-orange-40: rgba(255, 84, 0, .4);
+    --color-orange-30: rgba(255, 84, 0, .3);
+    --color-orange-20: rgba(255, 84, 0, .2);
+    --color-orange-10: rgba(255, 84, 0, .1);
+    /**/
     --color-green: #4bb900;
     --color-blue: red;
     /**/
