--- a/styles/basics.css
+++ b/styles/basics.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     padding-top: calc(var(--spc) * 3.5);
 }
@@ -5,26 +9,4 @@ html {
 body {
     color: var(--color-dark);
     background: var(--color-light);
-}
-
-a {
-    color: var(--color-dark);
-    text-decoration: none;
-    background-image: linear-gradient(180deg, transparent 90%, var(--color-orange) 0), linear-gradient(180deg, transparent 90%, var(--color-light-gray) 0);
-    background-size: 0 100%, 100% 100%;
-    background-repeat: no-repeat;
-    transition: background-size .2s ease;
-}
-
-a:hover {
-    background-size: 100% 100%, 100% 100%;
-}
-
-.anchor-offset:before {
-    content: "";
-    position: relative;
-    margin-top: -6rem;
-    height: 6rem;
-    display: block;
-    z-index: -1;
 }
