--- a/styles/layout.css
+++ b/styles/layout.css
@@ -358,6 +358,11 @@ body {
     margin-left: calc(var(--spc) * 2);
 }
 
+.mx-3 {
+    margin-right: calc(var(--spc) * 3);
+    margin-left: calc(var(--spc) * 3);
+}
+
 .my-0 {
     margin-top: 0;
     margin-bottom: 0;
@@ -373,6 +378,11 @@ body {
     margin-bottom: calc(var(--spc) * 2);
 }
 
+.my-3 {
+    margin-top: calc(var(--spc) * 3);
+    margin-bottom: calc(var(--spc) * 3);
+}
+
 .mt-0 {
     margin-top: 0;
 }
@@ -383,6 +393,10 @@ body {
 
 .mt-2 {
     margin-top: calc(var(--spc) * 2);
+}
+
+.mt-3 {
+    margin-top: calc(var(--spc) * 3);
 }
 
 .mr-0 {
@@ -397,6 +411,10 @@ body {
     margin-right: calc(var(--spc) * 2);
 }
 
+.mr-3 {
+    margin-right: calc(var(--spc) * 3);
+}
+
 .mb-0 {
     margin-bottom: 0;
 }
@@ -409,6 +427,10 @@ body {
     margin-bottom: calc(var(--spc) * 2);
 }
 
+.mb-3 {
+    margin-bottom: calc(var(--spc) * 3);
+}
+
 .ml-0 {
     margin-left: 0;
 }
@@ -419,6 +441,10 @@ body {
 
 .ml-2 {
     margin-left: calc(var(--spc) * 2);
+}
+
+.ml-3 {
+    margin-left: calc(var(--spc) * 3);
 }
 
 /* SPACING (PADDINGS) */
